# Neuropulse

./: .gitattributes
mental health project/: .gitignore  prediction_engine.py  requirements.txt  streamlit_app.py
mental health project/.streamlit/: config.toml
mental_health_project/: .gitignore  .vercelignore  pyproject.toml  requirements.txt  vercel.json
mental_health_project/api/: index.py
mental_health_project/app/: app_enhanced.py
mental_health_project/model/: knn_imputer.pkl  mental_health_model_encoder.pkl  mental_health_model_features.pkl  mental_health_model_scaler.pkl  smote_transformer.pkl
